--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,20 +21,21 @@ pool:
 #    testResultsFiles: '**/surefire-reports/TEST-*.xml'
 #    goals: 'package'
 
-- stage: 'Build'
-  displayName: 'Build the second web application'
-  jobs: 
-  - job: 'Build'
-    displayName: 'Build job'
+stages:
+  - stage: 'Build'
+    displayName: 'Build the second web application'
+    jobs: 
+    - job: 'Build'
+      displayName: 'Build job'
 
-    steps:
-    - task: Maven@3
-      inputs:
-        mavenPomFile: 'pom.xml'
-        mavenOptions: '-Xmx3072m'
-        javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.8'
-        jdkArchitectureOption: 'x64'
-        publishJUnitResults: true
-        testResultsFiles: '**/surefire-reports/TEST-*.xml'
-        goals: 'package'
+      steps:
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          mavenOptions: '-Xmx3072m'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.8'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'package'
